// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lane DB — golden (recorded on the untouched base) /copilot?capabilityId=schedule at 390 (CopilotShell, no autoSubmitSeed) 1`] = `
{
  "lines": 75,
  "sha256": "987d39c2632a115c1f873c6332ecf338cb3ccb1db65ecd6b2d65b280cfc9bddf",
}
`;

exports[`lane DB — golden (recorded on the untouched base) /schedule at 390 with the "Tell me what to change" sheet open (ScheduleEditPanel, modal) 1`] = `
{
  "lines": 774,
  "sha256": "3b209a5577ff943a93ec7cd6d38694fe972aa4adca18f63f0e0b06d2ed8ad370",
}
`;

exports[`lane DB — golden (recorded on the untouched base) /schedule-pro at native 1000 × 700 (the legacy branch) 1`] = `
{
  "lines": 404,
  "sha256": "7d451bb03566df0df20e950bea1a55c183f86a7ab31294f6b6dd5920d679ba00",
}
`;

exports[`lane DB — golden (recorded on the untouched base) /schedule-pro?projectId at 390 iOS: the narrow gate 1`] = `
{
  "lines": 53,
  "sha256": "7726256a9eab50f52008eda622d5b437971099551aed33ec56f17c4bbcc7f5e3",
}
`;

exports[`lane DB — golden (recorded on the untouched base) components at 390 (every sheet rendered) EarnedValuePanel card + its sheet 1`] = `
{
  "lines": 132,
  "sha256": "c4676a5bc928fc35b36729cae3c86188e41eeaa9d8482e1473f15f2b07cea792",
}
`;

exports[`lane DB — golden (recorded on the untouched base) components at 390 (every sheet rendered) ScheduleShareSheet, open (full and by trade) 1`] = `
{
  "lines": 53,
  "sha256": "5e489d4f5f2bb8dc92f95b9286a57165e556490782e8a81b3ed6676eda8b8d55",
}
`;

exports[`lane DB — golden (recorded on the untouched base) components at 390 (every sheet rendered) ScheduleShareSheet, open (full and by trade) 2`] = `
{
  "lines": 88,
  "sha256": "9ee563fc8efba8913c2ccb46bf10696b8fc1459e42111f6accf54310b773d426",
}
`;

exports[`lane DB — golden (recorded on the untouched base) components at 390 (every sheet rendered) SubUpdatesPanel card + its sheet 1`] = `
{
  "lines": 118,
  "sha256": "961dc312c8b9a6f358965f8a49b9953bbbffeb44f0e42ff56857f6e1dfa00478",
}
`;

exports[`lane DB — golden (recorded on the untouched base) components at 390 (every sheet rendered) WeatherRescheduleModal, open 1`] = `
{
  "lines": 88,
  "sha256": "cb250d401b47b46c237aece056e479e60d9a863267e84592be2c15c8a01c379b",
}
`;

exports[`lane DB — golden (recorded on the untouched base) components at 390 (every sheet rendered) WeatherReschedulePrompt banner + its sheet 1`] = `
{
  "lines": 108,
  "sha256": "14d5f95261054dec47aaf9576855e4b6f943292f25b0e2be695ea3ed196f6d86",
}
`;
